# aoc-2022

./: .gitignore  README.md  generate_alphabet.py  generate_input_string.py  pyproject.toml
1/: main.go  main.py
2/: input.py  main.py  main_speed.py
2022/go/1/: main.go
2022/python_solutions/2/: main.py
2022/python_solutions/4/: main.py
2022/python_solutions/5/: test_main.py
2022/python_solutions/7/: test_solution.py
2022/python_solutions/8/: solution.py
2022/python_solutions/9/: test_solution.py
2023/1/: main.py  test_utils.py  utils.py
2023/2/: main.py  test_utils.py  utils.py
2023/3/: main.py  test_utils.py  utils.py
2023/4/: main.py  test_utils.py  utils.py
2023/5/: main.py  test_utils.py  utils.py
2023/6/: main.py  test_utils.py  utils.py
2023/7/: README.md  solution.py  test_solution.py
2024/1/: solution.py
2024/2/: solution.py  test_solution.py
3/: main.py
python_solutions/5/: main.py
python_solutions/6/: solution.py  test_solution.py
python_solutions/7/: solution.py
python_solutions/8/: test_solution.py
python_solutions/9/: solution.py
