[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = ""
authors = ["Mats Jalas <mats.jalas@gmail.com>"]
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
